# bevy_soccer

./: Cargo.toml
src/: animation.rs  arena.rs  ball.rs  camera.rs  constants.rs  lib.rs  main.rs  obstacle.rs  player.rs  ui.rs  utils.rs
